crates/tests/tests/slang/fail/no_from_slang.stderr
error[E0277]: the trait bound `f32: From<mutate_lib::prelude::Float>` is not satisfied
  --> tests/slang/fail/no_from_slang.rs:11:21
   |
11 |     let _raw: f32 = f32::from(wrapped);
   |                     ^^^ the trait `From<mutate_lib::prelude::Float>` is not implemented for `f32`
   |
   = help: `f32` implements trait `From<T>`:
             From<bool>
             From<dpi::LogicalUnit<P>>
             From<dpi::PhysicalUnit<P>>
             From<f16>
             From<i16>
             From<i8>
             From<mutate_lib::prelude::half::bf16>
             From<mutate_lib::prelude::half::f16>
             From<u16>
             From<u8>
             From<zerocopy::byteorder::F32<O>>
